# proper-test-index

./: .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  _quarto.yml  aggregate.py  collect.py  course_factor.csv  dev-requirements.txt  index.html  index.qmd  listings.json  pti.csv  pyproject.toml  requirements.in  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
_freeze/posts/did-randy-cook/index/execute-results/: html.json
_freeze/posts/proper-player-index/index/execute-results/: html.json
_freeze/posts/proper-test-index/index/execute-results/: html.json
_site/: about.html  index.html  listings.json  search.json
_site/posts/proper-player-index/: index.html
_site/posts/proper-test-index/: index.html
posts/did-randy-cook/: index.qmd
posts/proper-player-index/: gen_curr_files.py  index.html  index.qmd  ppi-curr.csv  ppi-jt.csv
posts/proper-test-index/: index.qmd
proper_test_index/: _meta.py  collect.py  ppi.py  pti.py  schemas.py
tests/: test_collect.py  test_pti.py
tests/data/: event-list.json  scoring.json
